<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!--搜索widget-->
    <string name="search_go_web">GO</string>
    <string name="search_widget_hint">Search Apps,Contacts,Messages</string>
    <string name="search_title_contacts">Contacts</string>
    <string name="search_title_apps">Apps</string>
    <string name="search_title_message">Messages</string>
    <string name="search_none_content">No related contents!</string>
    <string name="search_engine_select">Choose Search Engine</string>
    <string name="search_engine_google">Google</string>
    <string name="search_engine_baidu">Baidu</string>
    <string name="search_engine_bing">Bing</string>
    <string name="search_engine_yandex">Yandex</string>
    <string name="search_result">Search Results</string>
    <string name="search_setting">Search Settings</string>
    <string name="search_permission_hint">Permission to "Read contacts" is required</string>
    <string name="search_net_not_available">Network unavailable,Check network.</string>
    <string name="search_more_result">%1$s more results</string>
    <string name="search_recent">Recent</string>
    <string name="setting_item_auto_feedback">Feedback</string>
    <string name="search_more">More</string>
    <string name="search_less">Less</string>

    <string name="search_title_appcenter">Apps</string>
    <string name="search_appcenter_item_content">Search in Apps</string>
    <string name="search_in_web_item_content">Search in Web</string>

    <string name="hot_site_title">Hot Sites</string>
    <string name="hot_site_amazon">Amazon</string>
    <string name="hot_site_facebook">Facebook</string>
    <string name="hot_site_twitter">Twitter</string>
    <string name="hot_site_youtube">YouTube</string>
    <string name="hot_site_gmail">Gmail</string>
    <string name="hot_site_wiki">Wiki</string>
    <string name="hot_site_ebay">ebay</string>
    <string name="hot_site_bbc">BBC</string>
    <string name="hot_site_yahoo">Yahoo</string>
    <string name="hot_site_espn">Espn</string>

    <string name="hot_game_title">Hot Games</string>
    <string name="hot_game_jewel_jungle">Jewel jungle</string>
    <string name="hot_game_bubble_spirit">Bubble spirit</string>
    <string name="hot_game_solitaire_classic">Solitaire</string>
    <string name="hot_game_hop_dont_stop">Hop</string>
    <string name="hot_game_shards">Shards</string>

</resources>